--- a/light9/vidref/vidref.glade
+++ b/light9/vidref/vidref.glade
@@ -9,46 +9,25 @@
       <object class="GtkFixed" id="fixed1">
         <property name="visible">True</property>
         <child>
-          <object class="GtkLabel" id="label1">
-            <property name="width_request">85</property>
-            <property name="height_request">20</property>
-            <property name="visible">True</property>
-            <property name="yalign">0.47999998927116394</property>
-            <property name="label" translatable="yes">Live view</property>
-          </object>
-          <packing>
-            <property name="x">5</property>
-            <property name="y">16</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkImage" id="liveVideo">
-            <property name="width_request">474</property>
-            <property name="height_request">291</property>
-            <property name="visible">True</property>
-          </object>
-          <packing>
-            <property name="x">6</property>
-            <property name="y">40</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkFrame" id="frame1">
-            <property name="width_request">338</property>
-            <property name="height_request">269</property>
+            <property name="width_request">336</property>
+            <property name="height_request">277</property>
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
             <property name="shadow_type">out</property>
             <child>
-              <object class="GtkAlignment" id="alignment1">
+              <object class="GtkFixed" id="fixed2">
                 <property name="visible">True</property>
-                <property name="left_padding">12</property>
                 <child>
                   <object class="GtkDrawingArea" id="vid3">
-                    <property name="width_request">100</property>
-                    <property name="height_request">80</property>
+                    <property name="width_request">320</property>
+                    <property name="height_request">240</property>
                     <property name="visible">True</property>
                   </object>
+                  <packing>
+                    <property name="x">7</property>
+                    <property name="y">8</property>
+                  </packing>
                 </child>
               </object>
             </child>
@@ -61,8 +40,41 @@
             </child>
           </object>
           <packing>
-            <property name="x">496</property>
-            <property name="y">41</property>
+            <property name="x">15</property>
+            <property name="y">10</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkFrame" id="frame2">
+            <property name="width_request">336</property>
+            <property name="height_request">259</property>
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">out</property>
+            <child>
+              <object class="GtkAlignment" id="alignment1">
+                <property name="visible">True</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <object class="GtkImage" id="liveVideo">
+                    <property name="width_request">320</property>
+                    <property name="height_request">240</property>
+                    <property name="visible">True</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="label">
+              <object class="GtkLabel" id="label3">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;Playback 1&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="x">373</property>
+            <property name="y">23</property>
           </packing>
         </child>
       </object>
