vidref complete panels on each replay. replays load and delete pretty well
Ignore-this: 3c0eb5c77caf08b16ab557fae7b46418

darcs-hash:20100614062109-312f9-a6f209cdc280cdebc542088105c617fe691bfa35.gz

--- a/light9/vidref/vidref.glade
+++ b/light9/vidref/vidref.glade
@@ -3,9 +3,8 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="MainWindow">
-    <property name="width_request">990</property>
-    <property name="height_request">709</property>
-    <property name="default_width">500</property>
+    <property name="title" translatable="yes">vidref</property>
+    <property name="default_width">690</property>
     <property name="default_height">500</property>
     <child>
       <object class="GtkHBox" id="hbox3">
