--- a/light9/curvecalc/curvecalc.glade
+++ b/light9/curvecalc/curvecalc.glade
@@ -167,8 +167,10 @@
                         <property name="use_action_appearance">False</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Play/pause (C-p)</property>
+                        <property name="label" translatable="yes">_Play/pause</property>
                         <property name="use_underline">True</property>
+                        <accelerator key="p" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <signal name="activate" handler="onPlayPause" swapped="no"/>
                       </object>
                     </child>
                   </object>
@@ -182,6 +184,7 @@
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Poin_ts</property>
                 <property name="use_underline">True</property>
+                <signal name="activate" handler="onPlayPause" swapped="no"/>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu4">
                     <property name="visible">True</property>
@@ -327,7 +330,6 @@
                           <object class="GtkViewport" id="viewport1">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="vscroll_policy">natural</property>
                             <property name="shadow_type">none</property>
                             <child>
                               <object class="GtkTable" id="subterms">
