fix quit and ctrl-q by using kill -9
Ignore-this: db0474f9352cc297bf2e596ac42aee1c

darcs-hash:20120610055715-836b1-d53502252eba0f253ed7f9fde1dfa1d85385b7c9.gz

--- a/light9/curvecalc/curvecalc.glade
+++ b/light9/curvecalc/curvecalc.glade
@@ -41,6 +41,8 @@
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <signal name="activate" handler="onQuit" swapped="no"/>
                       </object>
                     </child>
                   </object>
