add marble-ice theme. use --reload to opt in to all autoreloading
Ignore-this: d87e96e140fa5c7d43bc3cdc32b86a50

darcs-hash:20120610065546-836b1-7d6138b40f50695a41850c9ebdfdf62289809736.gz

--- a/light9/curvecalc/curvecalc.glade
+++ b/light9/curvecalc/curvecalc.glade
@@ -193,7 +193,6 @@
                 <property name="use_action_appearance">False</property>
                 <property name="label" translatable="yes">Poin_ts</property>
                 <property name="use_underline">True</property>
-                <signal name="activate" handler="onPlayPause" swapped="no"/>
                 <child type="submenu">
                   <object class="GtkMenu" id="menu4">
                     <property name="visible">True</property>
@@ -399,6 +398,7 @@
                             <property name="receives_default">True</property>
                             <property name="use_action_appearance">False</property>
                             <property name="image">image2</property>
+                            <accelerator key="r" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
                             <signal name="clicked" handler="onReloadSubs" swapped="no"/>
                           </object>
                           <packing>
